# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.61 $ $Date: 2008-05-28 22:39:58 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2008-05-28  Christian Heller  <christian.heller@tuxtax.de>
        * Replace function calls to "strlen" with "wcslen", where suitable
        * Convert files from "char" to "wchar_t" in directory "applicator/"

2008-05-27  Christian Heller  <christian.heller@tuxtax.de>
        * Convert files from "char" to "wchar_t" in directory "memoriser/converter/"

2008-05-25  Christian Heller  <christian.heller@tuxtax.de>
        * Convert files from "char" to "wchar_t" in directory "memoriser/converter/character/"

2008-05-24  Christian Heller  <christian.heller@tuxtax.de>
        * Verify that no conversion is necessary for files in directories "memoriser/array/", "memoriser/allocator/"
        * Convert files from "char" to "wchar_t" in directories "memoriser/", "memoriser/accessor/", "memoriser/communicator/"

2008-05-21  Christian Heller  <christian.heller@tuxtax.de>
        * Convert files from "char" to "wchar_t" in directory "globals/"

2008-05-20  Christian Heller  <christian.heller@tuxtax.de>
        * Remove function calls of "allocate_array" etc. from module "logger.c"
            and use the global log message array "LOG_MESSAGE" instead, in order to assure thread safety
        * Add global variables "LOG_MESSAGE" and "LOG_MESSAGE_COUNT" in module "log_variables.c" and
            allocate/ initialise them in module "globaliser.c"
        * Replace function calls of "fputws" with "log_write_terminated_message", everywhere;