@@ -14,9 +14,13 @@
 # http://www.cybop.net
 # - Cybernetics Oriented Programming -
 #
-# @version $Revision: 1.61 $ $Date: 2008-05-28 22:39:58 $ $Author: christian $
+# @version $Revision: 1.62 $ $Date: 2008-06-07 11:09:26 $ $Author: christian $
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
+
+2008-06-06  Christian Heller  <christian.heller@tuxtax.de>
+        * Fix bug in module "initialiser.c" by handing over multibyte character strings
+            instead of wide character strings in function call "decode"
 
 2008-05-28  Christian Heller  <christian.heller@tuxtax.de>
         * Replace function calls to "strlen" with "wcslen", where suitable
